--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+    <p>Kalium is a Java binding to <a href="http://nacl.cr.yp.to/">Networking and Cryptography</a> library by <a href="http://cr.yp.to/djb.html">Daniel J. Bernstein</a>. All the hard work of making a portable NaCl API version was done by <a href="https://github.com/jedisct1">Frank Denis</a> on <a href="https://github.com/jedisct1/libsodium">libsodium</a> and kalium was totally inspired by <a href="https://github.com/tarcieri">Tony Arcieri's</a> work with <a href="https://github.com/cryptosphere/rbnacl">RbNaCl</a>.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
@@ -52,6 +49,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
