Removal of dirty footer

--- a/index.html
+++ b/index.html
@@ -58,13 +58,9 @@ mvn clean install
 
 <h4>Notes</h4>
 
-<p>kalium is a work in progress, feedback, bug reports and patches are always welcome.</p>
+<p>kalium is a work in progress, maintained by <a href="https://github.com/abstractj">abstractj</a> and <a href="https://github.com/abstractj/kalium/graphs/contributors">contributors</a>. Feedback, bug reports and patches are always welcome.</p>
+
         </section>
-
-      <footer class="site-footer">
-      <span class="site-footer-owner"><a href="https://github.com/abstractj/kalium">Kalium</a> is maintained by <a href="https://github.com/abstractj">abstractj</a> and <a href="https://github.com/abstractj/kalium/graphs/contributors">contributors.</a></span>
-
-      </footer>
 
   </body>
 </html>
