--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <body>
     
     <div class="brand">
-      <div class="logo">LOGO</div>
     </div>
     
     <div class="container-fluid">
@@ -25,6 +24,9 @@
     <div class="col-sm-6">
 
     <section class="download">
+      <div class="logo">
+        <img type="image/svg+xml" src="img/kalium.svg" alt="PatternFly Enterprise Application" width="auto" height="40px" />
+      </div>
       <a href="https://github.com/abstractj/kalium" class="btn btn-primary">View on GitHub</a>
       <a href="https://github.com/abstractj/kalium/zipball/master" class="btn btn-default">Download .zip</a>
       <a href="https://github.com/abstractj/kalium/tarball/master" class="btn btn-default">Download .tar.gz</a>
