--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="col-md-6 col-sm-8 content">
 
     <section class="download">
-      <div class="logo">
+      <div class="logo one fade-in-up">
         <img type="image/svg+xml" src="img/kalium.svg" alt="PatternFly Enterprise Application" width="auto" height="40px" />
       </div>
       <a href="https://github.com/abstractj/kalium" class="btn btn-primary">View on GitHub</a>
