fix bug on btns when responsive

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div class="logo one fade-in-up">
               <img type="image/svg+xml" src="img/kalium.svg" alt="PatternFly Enterprise Application" width="auto" height="40px" />
             </div>
-            <a href="https://github.com/abstractj/kalium" class="btn btn-primary">View on GitHub</a>
-            <a href="https://github.com/abstractj/kalium/zipball/master" class="btn btn-default">Download .zip</a>
-            <a href="https://github.com/abstractj/kalium/tarball/master" class="btn btn-default">Download .tar.gz</a>
+            <a href="https://github.com/abstractj/kalium" class="btn btn-primary"><span class="hidden-xs">View on </span>GitHub</a>
+            <a href="https://github.com/abstractj/kalium/zipball/master" class="btn btn-default"><span class="hidden-xs">Download </span>.zip</a>
+            <a href="https://github.com/abstractj/kalium/tarball/master" class="btn btn-default"><span class="hidden-xs">Download </span>.tar.gz</a>
           </section>    
     
           <section class="page-header">
